Fix table layout issue for long info messages

--- a/src/app.scss
+++ b/src/app.scss
@@ -195,7 +195,7 @@ table.roleTable {
     background-color: #ebf8ff; }
 
 .thHostInfo, .tdHostInfo  {
-    min-width: 275px;
+    width: 275px;
 }
 
 .tdDeleteBtn {
